correct z-index of top class and add top property to flash messages (#2919)
* correct z-index of top class and add top to flash

* increase z index of top class

* increase z-index

* z-index above-flashes

* correct z-index of top class and add top to flash

* increase z index of top class

* increase z-index

* z-index above-flashes

* change z-index to log, sync and top also

--- a/app/styles/app/modules/sync-button.scss
+++ b/app/styles/app/modules/sync-button.scss
@@ -8,7 +8,7 @@
   .button {
     position: relative;
 
-    @include z-index(above-above);
+    @include z-index(above);
 
     height: 2.6rem;
     padding: 0.6em 0.8em;
